--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="about-content">I am a somewhat recent grad from West Chester of University. I studied mathematics, but during my time there I took an interest in Computer Science and later web development. It wasn't until my last semester that I ended up taking a class in HTML and CSS. I made a crappy website featuring a cartoon dinosaur (that thankfully no longer exists) and it sparked an interest that has turned into a career. Given that I didn't have much experience building websites, I was extremely lucky to get a job shortly out of college doing exactly what I wanted. IT took my awhile to finally get around to it, but I wanted to build my own website so I could experiement with coming up with my own designs and functions without having to tailor more to a client. This website is new and will probably experience random changes and upgrades as time goes on and as I experiment with new functions.</div>
         </div>
     </div>
-    <div class="resume-section" id="#Resume">
+    <div class="resume-section" id="Resume">
         <div class="resume-header">Resume</div>
         <div class="experience resume-box">
             <div class="experience-header box-header">Experience</div>
