--- a/index.html
+++ b/index.html
@@ -50,13 +50,14 @@
     <div class="about-section" id="About">
         <div class="about-box">
             <div class="about-box-header">About Me</div>
-            <div class="about-content">I am a somewhat recent grad from West Chester of University. I studied mathematics, but during my time there I took an interest in Computer Science and later web development. It wasn't until my last semester that I ended up taking a class in HTML and CSS. I made a crappy website featuring a cartoon dinosaur (that thankfully no longer exists) and it sparked an interest that has turned into a career. Given that I didn't have much experience building websites, I was extremely lucky to get a job shortly out of college doing exactly what I wanted. IT took my awhile to finally get around to it, but I wanted to build my own website so I could experiement with coming up with my own designs and functions without having to tailor more to a client. This website is new and will probably experience random changes and upgrades as time goes on and as I experiment with new functions.</div>
+            <div class="about-content">I am a somewhat recent grad from West Chester University of Pennsylvania. I studied mathematics, but during my time there I took an interest in Computer Science and later web development. It wasn't until my last semester that I ended up taking a class in HTML and CSS. I made a crappy website featuring a cartoon dinosaur (that thankfully no longer exists) and it sparked an interest that has turned into a career. Given that I didn't have much experience building websites, I was extremely lucky to get a job shortly out of college doing exactly what I wanted. It took me awhile to finally get around to it, but I wanted to build my own website so I could experiement with coming up with my own designs and functions without having to tailor more to a client. This website is new and will probably experience random changes and upgrades as time goes on and as I experiment with new functions.</div>
         </div>
     </div>
     <div class="resume-section" id="Resume">
         <div class="resume-header">Resume</div>
+        <div class="experience-header box-header">Experience<span class="resume-expander experience expand"><span class="word">More</span> +</span></div>
         <div class="experience resume-box">
-            <div class="experience-header box-header">Experience</div>
+  
             <div class="experience-item">
                 <div class="experience-item-title">Junior Software Engineer</div>
                 <div class="experience-item-location">Compnet Inc.</div>
@@ -69,24 +70,27 @@
                         <li>Work with SQL</li>
                     </ul>
                 </div>
-                <div class="experience-description">Since starting at Compnet, I have worked on many different websites. Compnet is a small business with only a few developers. A lot of the sites that we work on are for small local businesses. At Compnet, I've worked with building out new sites and taking existing sites and moving them into a responsive design. I've worked with online stores and linking up to payment processors, like Authorize.net. I've done improvements and management to old sites, as well as building websites from scratch. I've gone from having very little knowledge and experience with web development to being able to understand and execute most aspects of the site building process. I've learned fast and continue to learn new skills every day as the field is constantly changing and evolving.</div>
+                <div class="experience-description">Since starting at Compnet, I have worked on many different websites. Compnet is a small business with only three developers. A lot of the sites that we work on are for small local businesses. At Compnet, I've worked with building out new sites and taking existing sites and moving them into a responsive design. I've worked with online stores and linking up to payment processors, like Authorize.net. I've done improvements and management to old sites, as well as building websites from scratch. I've gone from having very little knowledge and experience with web development to being able to understand and execute most aspects of the site building process. I've learned fast and continue to learn new skills every day as the field is constantly changing and evolving.</div>
+
+                <div class="experience-more"><span class="experience-more-title">Sites I've worked on with Compnet:</span> a new responsive design for <a href="http://www.nestcentercity.com/" target="_blank">Nest Center City</a>, impementing a new design and form for <a href="http://www.thehorizonfinancialgroup.com/HorizonFinancial" target="_blank">The Horizon Financial Group</a>, maintaining a store for <a href="http://www.nemusicpub.com/" target="_blank">NeMusicPub</a>, creating a new site and improving design and search functionality for <a href="http://www.irtliving.com" target="_blank">IRT Living</a>, and many more.</div>
                 <!--<div class="experience-examples">
                     <div class="example-wrapper">
                         <div class="example-header">Nest Responsive Redesign</div>
-                        <div class="example-image"></div>
-                        <div class="example-link"><a></a></div>
-                        <div class="example-description">I worked with the client to come up with a new responsive design for their existing site.</div>
+                        <div class="example-link"><a class="http://www.nestcentercity.com/">www.nestcentercity.com</a></div>
+                        <div class="example-description">I worked with the client to come up with a new responsive design for their existing site. We took some aspects from their existing design to create a full width, responsive template that worked for them.</div>
                     </div>
+                    <div class="example-wrapper"></div>
                 </div>-->
             </div>
         </div>
+        <div class="education-header box-header">Education<span class="resume-expander education expand"><span class="word">More</span> +</span></div>       
         <div class="education resume-box">
-            <div class="education-header box-header">Education</div>
+         
             <div class="education-title">West Chester University of Pennsylvania</div>
-            <div class="education-date">Graduated: May 2015</div>
-            <div class="education-degree">B.A. in Mathematics, Minor in Computer Science Department</div>
+            <div class="education-degree">B.A. in Mathematics, Minor in Computer Science</div>
+            <div class="education-date">Graduated: May 2015</div>           
             <div class="education-gpa">3.734</div>
-            <div class="education-more">More Info</div>
+            <div class="education-more">More Info +</div>
             <div class="education-more-info">
                 <div class="more-title">Scholarships/Achievements</div>
                 <ul class="achievments-list">
@@ -97,8 +101,9 @@
                 </ul>
             </div>
         </div>
+        <div class="skills-header box-header">Skills<span class="resume-expander skills expand"><span class="word">More</span> +</span></div>
         <div class="skills resume-box">
-            <div class="skills-header box-header">Skills</div>
+
             <div class="skills-list-wrapper">
                 <ul class="skills-list">
                     <li class="skills-item">HTML/CSS</li>
@@ -117,10 +122,15 @@
         <div class="gallery-header">Gallery</div>
     </div>-->
     <div class="contact-section" id="Contact">
-        <div class="contact-header">Contact</div>
+        <div class="contact-header">Contact<span class="resume-expander contact expand">+</span></div>
         <div class="contact-email">Email: <a href="mailto:gilletteanicole@gmail.com">GilletteANicole@gmail.com</a></div>
         <div class="contact-social">
             <div class="social-icon"><a href="https://www.instagram.com/nicole_a_gillette/" target="_blank"><img class="instagram" src="images/instagram.png" /></a></div>
+        </div>
+        <div class="instagram-feed">
+            <!-- LightWidget WIDGET -->
+            <script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/0fd028abea2c5982a85962d70bead4e1.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+
         </div>
     </div>
     <div class="footer">2017 Nicole A. Gillette</div>
