--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="experience resume-box">
   
             <div class="experience-item">
-                <div class="experience-item-title">Junior Software Engineer</div>
+                <div class="experience-item-title">Software Engineer</div>
                 <div class="experience-item-location">Compnet Inc.</div>
                 <div class="experience-item-time">July 2015-Present</div>
                 <div class="experience-bullets">
@@ -132,7 +132,7 @@
 
         </div>
     </div>
-    <div class="footer">2017 Nicole A. Gillette</div>
+    <div class="footer">2018 Nicole A. Gillette</div>
 </div>
 </body>
 </html>
