--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -74,9 +74,9 @@
             <div class="job-company">Compnet Inc</div>
             <ul class="job-description-list">
                 <li>Front and back end development</li>
-                <li>Helped develop ASP.Net web applications using a custom company built CMS</li>
-                <li>Managed backend of applications using SQL Server</li>
-                <li>Communicate with clients to gather requirements</li>
+                <li>Build custom development solutions utilizing ASP.Net with MVC Framework</li>
+                <li>Utilize SQL Server and Entity Framework to manage databases</li>
+                <li>Communicate directly with clients to create requirments for new projects</li>
             </ul>
         </div>
             <div class="job-projects">
@@ -85,40 +85,30 @@
                     <div class="project-wrapper">
                         <div class="project-title">Coastal Association Management</div>
                         <div class="project-subtitle">Custom Website and Member Data Room</div>
-                        <ul class="project-description-list">
-                            <li>Designed custom website to list properties</li>
-                            <li>Developed custom data room file management system with member login for property owners</li>
-                            <li>Developed form system to distribute property forms and files directly to property management.</li>
-                        </ul>
+                        <div class="project-description">
+                            Designed and built new custom website for property management company that includes a member login section with a data room file management system and custom forms that send directly to each property.
+                        </div>
                     </div>
                     <div class="project-wrapper">
                         <div class="project-title">Malachi Network</div>
                         <div class="project-subtitle">Custom Website and Member Course Portal</div>
-                        <ul class="project-description-list">
-                            <li>Created member course tools to allow client full control of uploading course content</li>
-                            <li>Built tools to allow for scheduling video lessons</li>
-                            <li>Built custom forms that allowed admins to build questions specific for each lesson and allowed them to provide feedback to the user</li>
-                        </ul>
+                        <div class="project-description">
+                            Created a new website for a religous organization to host an online course. Built new custom tools to allow them to upload course content and videos. Helped build a custom form system within the CMS that allows complete the admin to client completely customized forms for member completion. 
+                        </div>
                     </div>
                 </div>
                 <div class="right-column">
                     <div class="project-wrapper">
                         <div class="project-title">Menchey Music</div>
                         <div class="project-subtitle">Custom Form and tie in to POS software</div>
-                        <ul class="project-description-list">
-                            <li>Developed form systems that feed instrument rentals and warranty agreements directly to POS system</li>
-                            <li>Utilized the POS API to directly pull instrument and school details to populate form fields</li>
-                            <li>Tied into payment processor to tokenize credit cards</li>
-                        </ul>
+                        <div class="project-description">Worked directly with client to establish connection with a new API to tie instrument rental and warranty agreement forms directly into their POS system. Utilized their payment processor to tokenize credit cards and feed payments directly back into their POS system.</div>
                     </div>
                     <div class="project-wrapper">
                         <div class="project-title">AG Industrial</div>
                         <div class="project-subtitle">Linked Websites with ECommerce and Product Management</div>
-                        <ul class="project-description-list">
-                            <li>Built custom CMS to link together 4 company websites allowing all sites to be managed through one CMS portal</li>
-                            <li>Developed product tools that tied in with company POS software to pull prices and inventoy in real time</li>
-                            <li>Tied into payment processor and utilized CIM to tokenize customer payment and shipping profiles</li>
-                        </ul>
+                        <div class="project-description">
+                            Enhanced CMS system to allow 4 websites to link together and be managed through one CMS admin. Helped create connection that tied into their POS software to pull inventory and prices in real time. Set up a new connection to a CIM to tokenize customer payment and shipping profiles.
+                        </div>
                     </div>
                 </div>
             </div>
